--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -30,6 +30,13 @@ html {
      padding-right: 20px;
      padding-left: 10px;
 }
+.calculator-screen-history-label{
+     background-color: #252525;
+     color: #d4d4d4;
+     font-size: 2rem;
+     display: block;
+     margin-bottom: -1px;
+}
 
 .calculator-screen-history {
      width: 100%;
